--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
+    "motion": "^11.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.15"
