--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formspree/react": "^2.5.1",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
     "motion": "^11.13.1",
@@ -18,6 +19,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.14.5",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
